# MVP

MVP/: Procfile  README.md  api_tester.py  api_tester_flask.py  app.py  pyproject.toml  rapidapi_client.py  requirements.txt
MVP/backend/: requirements.txt
MVP/backend/app/: main.py
MVP/backend/app/api/: __init__.py
MVP/backend/app/api/analytics/: routes.py
MVP/backend/app/api/auth/: routes.py
MVP/backend/app/api/data/: routes.py
MVP/backend/app/api/query/: routes.py
MVP/backend/app/api/realtime/: routes.py
MVP/backend/app/api/visualization/: routes.py
MVP/backend/app/data/adapters/: base.py  facebook.py  instagram.py  nlp.py  similarweb.py
MVP/backend/app/database/: config.py  migrations.py
MVP/backend/app/models/: canonical.py  core.py  user.py
MVP/backend/app/services/: advanced_analytics.py  analytics.py  auth.py  cache.py  data_acquisition.py  data_validation.py  export.py  monitoring.py  pdf_export.py  query.py  realtime.py  visualization.py
MVP/backend/app/tasks/: __init__.py  aggregation.py  cleanup.py
MVP/frontend/: package.json
MVP/frontend/src/app/: layout.tsx
MVP/frontend/src/app/dashboard/: page.tsx
MVP/frontend/src/app/login/: page.tsx
MVP/frontend/src/components/dashboard/: CardWidget.tsx  ReviewsWidget.tsx  SentimentWidget.tsx  TrafficWidget.tsx
MVP/frontend/src/contexts/: AuthContext.tsx
MVP/templates/: index.html
